// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PositionsManagerContract deploys new user position contract and forward addCollateral  1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 101000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 22548n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
            "type": "internal",
            "value": 100942928000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0D74C595800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B3_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 98601000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20542n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{4A35F9D0800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000000000000000000000000000000000000000000000000000000000000001}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
            "type": "internal",
            "value": 98344000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract newPositionId request from userPosition, increase lastPositionId and send it back to sender  1`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0D74C595800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B3_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBqJ1A2wQ5MkOBlhdTr7ML850tmbmDecFDAEvNUwHvm0sGh",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20542n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{4A35F9D0800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000000000000000000000000000000000000000000000000000000000000002}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQBqJ1A2wQ5MkOBlhdTr7ML850tmbmDecFDAEvNUwHvm0sGh",
            "type": "internal",
            "value": 98344000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on decreaseTotalStable from userPosition forwards message to the gateKeeper 1`] = `
[
  {
    "$seq": 10,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{ED81304A800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD0000000000000000003_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 21034n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{ED81304A800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD0000000000000000003_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
            "type": "internal",
            "value": 98473000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on doWithdrawCollateral from userPosition forwards message to the gateKeeper 1`] = `
[
  {
    "$seq": 11,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 21182n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{C3CD33BF800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD001_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
            "type": "internal",
            "value": 98537000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on increaseTotalStable from userPosition forwards message to the gateKeeper 1`] = `
[
  {
    "$seq": 7,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{96096519800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD001_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20689n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{96096519800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD001_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
            "type": "internal",
            "value": 977848000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on repayStable from gateKeeper forwards message to the userPosition 1`] = `
[
  {
    "$seq": 8,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{BEF31E07800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 21848n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{BEF31E07800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
            "type": "internal",
            "value": 98309000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 9,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 91178000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6330n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract on withdrawStable from gateKeeper forwards message to the userPosition 1`] = `
[
  {
    "$seq": 5,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQBhDJZIy0_RS_IdyGG5GxdsC8eWb15DS9b3IL2p2-b0cUi8",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 21653n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{6C3989BB800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B20000002E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
              "type": "cell",
            },
            "bounce": true,
            "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
            "to": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
            "type": "internal",
            "value": 976656000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 6,
    "events": [
      {
        "$type": "received-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQD-q_URnMcLNDmDEG6mn-oUsoeIHbzZCmHSBKok9925RPb1",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 958770000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6330n,
      },
    ],
  },
]
`;

exports[`PositionsManagerContract revert depositCollateral if sent not from gateKeeper 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{DDED1FE8800784F79BB9BDDE39E2B05A2820A591FBCD92F3ACC083685CD65E37ED00489A4B2A2E90EDD000000000020000000200000002000000020000000200000002935F1B401_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 101000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 5576,
        "errorMessage": "not from gateKeeper",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "type": "internal",
          "value": 100993705000n,
        },
      },
    ],
  },
]
`;

exports[`PositionsManagerContract should deploy correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{23071186801075E834DF4F15E107E94B1EDF44C910774A333E3C6B7B2F37E39B16FED191AD9001843259232D3F452FC8772186E46C5DB02F1E59BD790D2F5BDC82F6A76F9BD1C6_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
          "to": "kQDABUOp56Z0-s0ottjM90287XtNhXKPNbz9LlpHIqdmaNAq",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 9256n,
      },
    ],
  },
]
`;
